[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h2-station-siting"
version = "1.0.0"
description = "Optimization model for hydrogen refueling station placement"
readme = "README.md"
authors = [
    {name = Folasade Olanrewaju Ayoola, email = fayoola@alumni.stanford.edu}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Energy Systems Modeling",
    "Topic :: Scientific/Engineering :: Infrastructure Network Planning",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "geopandas>=0.10.0",
    "shapely>=1.8.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "PuLP>=2.5.0",
    "networkx>=2.6.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]
viz = [
    "plotly>=5.0.0",
    "folium>=0.12.0",
    "seaborn>=0.11.0",
]
performance = [
    "rtree>=0.9.7",
    "gurobipy>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/h2-station-siting"
Documentation = "https://h2-station-siting.readthedocs.io"
Repository = "https://github.com/yourusername/h2-station-siting.git"
Issues = "https://github.com/yourusername/h2-station-siting/issues"

[tool.setuptools]
packages = ["h2_station_siting"]